fix(breadcrumb): Alignment
- Made nicely align with navi and TOC

--- a/themes/hugo-docs/assets/elements/breadcrumbs.scss
+++ b/themes/hugo-docs/assets/elements/breadcrumbs.scss
@@ -4,7 +4,7 @@
   gap: $space-xs;
   max-width: 100%;
   padding: 0;
-  margin: 0 0 $space-m 0;
+  margin: 3px 0 $space-m 0; // 3px top margin to align nicely with navi and TOC
   overflow: auto;
   font-weight: 500;
   list-style: none;
